--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,48 @@
 {
-  "name": "{INIT /<IDEA>}",
+  "name": "{INIT /<IDEA>} — Digital Studio",
   "short_name": "INIT-IDEA",
-  "description": "Digital Studio - Code. Create. Connect.",
-  "start_url": "/",
+  "description": "We transform ideas into digital solutions. Web design, development, AI integration, digital marketing, multimedia, and technical support.",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#0a0a0a",
+  "orientation": "portrait-primary",
+  "background_color": "#070708",
   "theme_color": "#00FFFF",
+  "categories": ["business", "productivity", "utilities"],
+  "lang": "en-US",
+  "dir": "ltr",
   "icons": [
     {
       "src": "assets/logo.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "assets/logo.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "assets/logo.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "assets/logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "assets/logo.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
     }
   ]
 }
